fixed ellipsis issue on smaller screen

--- a/src/js/Components/ListItem.scss
+++ b/src/js/Components/ListItem.scss
@@ -1,42 +1,46 @@
 .row {
-   display: flex;
-   align-items: center;
-   height: 40px;
-   cursor: pointer;
-   list-style: none;
-   justify-content: space-between;
+  display: flex;
+  align-items: center;
+  height: 40px;
+  cursor: pointer;
+  list-style: none;
+  justify-content: space-between;
 
-   .flag {
-      line-height: 1;
-      padding-right: 12px;
-      flex-grow: 0;
-      flex-shrink: 0;
-      flex-basis: 36px;
+  .flag {
+    line-height: 1;
+    padding-right: 12px;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: 36px;
 
-      img {
-         width: 24px;
-         height: 24px;
-      }
-   }
+    img {
+      width: 24px;
+      height: 24px;
+    }
+  }
 
-   .participant {
-      font-size: 14px;
-      flex-grow: 1;
-      flex-shrink: 0;
-      flex-basis: auto;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      display: block;
+  .participant {
+    font-size: 14px;
+    flex-grow: 1;
+    flex-shrink: 0;
+    flex-basis: auto;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    display: block;
+    max-width: 110px;
+    padding-right: 2px;
+
+    @media screen and (min-width: 768px) {
       max-width: 140px;
-      padding-right: 2px;
-   }
+    }
+  }
 
-   .button {
-      flex-grow: 0;
-      flex-shrink: 0;
-      flex-basis: 60px;
-      display: flex;
-      height: 36px;
-   }
+  .button {
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: 60px;
+    display: flex;
+    height: 36px;
+  }
 }
